force-app/main/default/objects/Scheme_Questionnaire__c/Scheme_Questionnaire__c.object-meta.xml
<CustomObject>
    <label>Scheme Questionnaire</label>
    <nameField>
        <displayFormat>SQ-{00000}</displayFormat>
        <label>Scheme Questionnaire  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheme Questionnaire</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>