force-app/main/default/objects/Scheme_Questionnaire__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <label>Display Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>