force-app/main/default/objects/Scheme_Questionnaire__c/fields/Dynamic_Question__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Question__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dynamic Question</label>
    <type>Checkbox</type>
</CustomField>