force-app/main/default/objects/Scheme_Questionnaire__c/fields/Min_Limit__c.field-meta.xml
<CustomField>
    <fullName>Min_Limit__c</fullName>
    <label>Min. Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>