force-app/main/default/objects/Scheme_Questionnaire__c/fields/Scheme_Items__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Items__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheme Items</label>
    <referenceTo>Scheme_Items__c</referenceTo>
    <relationshipLabel>Scheme Questionnaire</relationshipLabel>
    <relationshipName>Scheme_Questionnaire</relationshipName>
    <type>Lookup</type>
</CustomField>