force-app/main/default/objects/Scheme_Questionnaire__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <description>Groups this rule/question under a section for display</description>
    <inlineHelpText>Enter the section name this item belongs to (e.g. Education, Experience, Financial).</inlineHelpText>
    <label>Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>