force-app/main/default/objects/Scheme_Questionnaire__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Display_Name__c</columns>
    <columns>Scheme_Items__c</columns>
    <columns>Section_Detail__c</columns>
    <columns>Stage__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SL_No__c</columns>
    <columns>Section__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>