force-app/main/default/objects/Scheme_Questionnaire__c/listViews/Clinical_and_Public_Health_Early_Career.listView-meta.xml
<ListView>
    <fullName>Clinical_and_Public_Health_Early_Career</fullName>
    <columns>NAME</columns>
    <columns>Display_Name__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Mandatory__c</columns>
    <columns>Max_Limit__c</columns>
    <columns>Scheme_Items__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Scheme_Items__c</field>
        <operation>equals</operation>
        <value>Clinical and Public Health Early Career Research Fellowship – [CPHE]</value>
    </filters>
    <label>Clinical and Public Health Early Career</label>
</ListView>